--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,38 @@
-[project]
-name = "mrn"
-version = "0.3.0"
-description = ""
-authors = [
-    {name = "Diego Oliveira",email = "diego263526352635@gmail.com"}
-]
-readme = "README.md"
-requires-python = ">=3.13"
-dependencies = [
-    "numpy (>=2.3.2,<3.0.0)",
-    "mkdocs (>=1.6.1,<2.0.0)",
-    "graphviz (>=0.21,<0.22)"
-]
-
-[tool.poetry]
-packages = [{include = "mrn", from = "src"}]
-
-
-[tool.poetry.group.dev.dependencies]
-mkdocs = "^1.6.1"
-
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=69", "wheel"]
+build-backend = "setuptools.build_meta"
 
-[tool.poetry.scripts]
-demo = "mrn.examples.demo_wiring:main"
-test = "mrn.test.run_table_check:main"
+[project]
+name = "paraconsistent"                 # escolha um nome disponível no PyPI
+version = "0.1.5"
+description = "Blocos de lógica paraconsistente com API simples."
+readme = "README.md"
+requires-python = ">=3.9"
+license = { file = "LICENSE" }
+authors = [{ name = "Diego", email = "diego263526352635@gmail.com" }]
+keywords = ["logic", "paraconsistent", "LPA2v", "reasoning", "fuzzy"]
+classifiers = [
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
+  "Typing :: Typed"
+]
+
+dependencies = []  # só stdlib
+
+[tool.setuptools]
+package-dir = {"" = "src"}                 # <-- layout em src/
+
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["paraconsistent*"]   # <— trocado de mrn* para paraconsistent*
+
+[tool.setuptools.package-data]
+mrn = ["py.typed"]                         # distribui tipagem
+
+[tool.setuptools.exclude-package-data]
+"mrn" = ["**/tests/*", "**/examples/*"]    # evita levar exemplos/testes
